--- a/style.css
+++ b/style.css
@@ -18,16 +18,17 @@
 }
 
 body{
-    background-color: var(--mountbatten-rosa);
-    color: var(--champanhe-rosa);
+    background-color: var(--champanhe-rosa);
+    color: var(--platina);
     display: flex;
     justify-content: center;
-    min-width: 100vh;
+    align-items: center;
+    min-height: 100vh;
     font-family: var(--fonte-texto);
 }
 
-.caixaPrincipal{
-    background-color: var(--platina);
+.caixa-principal{
+    background-color: var(--mountbatten-rosa);
     width: 90%;
     max-width: 600px;
     text-align: center;
@@ -35,6 +36,21 @@ body{
 }
 
 .titulo{
-    color: var(--flordecerejeira);
+    color: var(--rosa);
     font-family: var(--fonte-titulo);
+}
+
+button{
+    background-color: var(--mountbatten-rosa);
+    color: var(--platina);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: 0.3s;
+    margin: 10px auto;
+}
+
+button:hover{
+    background-color: var(--flordecerejeira);
+    
 }
